<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleVoiceUnhooked</string>
    <string name="action_settings">Settings</string>
    <string name="gmail_domain">\@gmail.com</string>
    <string name="username_label">username</string>
    <string name="password_label">password</string>
    <string name="rememberme_label">Remember me</string>
    <string name="login_label">Login</string>
    <string name="idle_message">-- -- waiting -- --</string>
    <string name="login_handler">doLogin</string>
    <string name="title_activity_call_back_dialer">CallBackDialer</string>
    <string name="hello_world">Welcome to unhooked.</string>
    <string name="title_activity_dialpad">Dialpad</string>
    <string name="callback_label">Initiate Callback</string>
    <string name="cancel_callback_label">Abort</string>
    <string name="search_contacts_label">Contacts</string>
    <string name="phone_to_use_label">Use this phone:(select below)</string>
    <string name="phone_to_dial_label">To call this number.</string>
    <string name="callback_handler">initiateCallBack</string>
    <string name="cancel_callback_handler">cancelCallBack</string>
    <string name="search_contact_handler">pickContact</string>
    <string name="title_activity_login">Login</string>

</resources>