<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_input"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_label" >
		
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwd_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_input"
        android:layout_below="@+id/username_input"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/password_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username_input"
        android:layout_alignBottom="@+id/username_input"
        android:layout_toRightOf="@+id/username_input"
        android:text="@string/gmail_domain" 
        android:gravity="bottom" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwd_input"
        android:layout_below="@+id/passwd_input"
        android:text="@string/login_label"
        android:onClick="@string/login_handler" />

    <CheckBox
        android:id="@+id/rememberme_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_button"
        android:layout_alignBottom="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/rememberme_label" />

    <TextView
        android:id="@+id/status_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_button"
        android:layout_below="@+id/login_button"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:text="@string/idle_message" />

</RelativeLayout>