<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dialpad" >

    <Spinner
        android:id="@+id/callback_phone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/dialer_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/callback_phone_input"
        android:layout_below="@+id/callback_phone_input"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialer_input"
        android:layout_below="@+id/dialer_input"
        android:text="@string/callback_label" 
        android:onClick="@string/callback_handler"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/call_button"
        android:layout_alignBottom="@+id/call_button"
        android:layout_toRightOf="@+id/call_button"
        android:text="@string/cancel_callback_label" 
        android:onClick="@string/cancel_callback_handler"/>

    <TextView
        android:id="@+id/status_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/call_button"
        android:layout_alignRight="@+id/callback_phone_input"
        android:layout_below="@+id/call_button"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:text="@string/idle_message" />

</RelativeLayout>